# pg_knowledge_graph

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pg_knowledge_graph.control
.github/workflows/: ci.yml
bench_standalone/: Cargo.toml
bench_standalone/src/: main.rs
benchmarks/: BASELINE.md  README.md  run_benchmarks.sh  vector_search_bench.sql
docker/: init.sql
sql/: kg--0.1.0.sql
src/: bench.rs  lib.rs  quantize.rs  rag.rs  vector.rs
src/graph/: components.rs  louvain.rs  mod.rs  pagerank.rs  traversal.rs
